# gha-sample

./: README.md  pyproject.toml
.github/actions/run-in-manylinux/: action.yml
.github/actions/run-in-manylinux-amd64/: action.yml
.github/actions/run-in-manylinux-arm64/: action.yml
.github/workflows/: cibuildwheel.yml  cibuildwheel_202506.yml  docker-instep.yml  docker-via-action.yml
scripts/: build-wheels-manylinux-pgo.sh  build-wheels-manylinux.sh  generate-manylinux-profile.sh  uname-a.sh
