[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp313t-*"
skip = "*t-win* *-win32 *-musllinux_*"
enable = ["cpython-freethreading"]

manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

build-verbosity = 1
before-build = "rustup update && rustup show && rustc --version"

[tool.cibuildwheel.linux]
environment = { PATH = "$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR = "always", RUSTFLAGS = "-C profile-use=/tmp/sudachi-profdata.merged -C opt-level=3" }
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y --no-modify-path --component llvm-tools && cd sudachi.rs && python/generate-manylinux-profile.sh"

[tool.cibuildwheel.macos]
environment = { PATH = "$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR = "always" }

[tool.cibuildwheel.windows]
environment = { PATH = "$UserProfile\\.cargo\\bin;$PATH" }
