[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp313t-*"
skip = "*t-win* *-win32 *-musllinux_*"
enable = ["cpython-freethreading"]

manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

build-verbosity = 1
before-build = "rustup show"

[tool.cibuildwheel.linux]
environment = { PATH = "$PATH:$HOME/.cargo/bin", CARGO_TERM_COLOR = "always", RUSTFLAGS = "-C profile-use=/tmp/sudachi-profdata.merged -C opt-level=3" }
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain stable -y --no-modify-path --component llvm-tools && cd sudachi.rs && python/generate-manylinux-profile.sh"

[tool.cibuildwheel.macos]
environment = { PATH = "$PATH:$HOME/.cargo/bin", CARGO_TERM_COLOR = "always", MACOSX_DEPLOYMENT_TARGET = "10.12" }
before-all = "rustup target add aarch64-apple-darwin x86_64-apple-darwin"

[tool.cibuildwheel.windows]
environment = { PATH = "$UserProfile\\.cargo\\bin;$PATH" }
